test/codegen-errors.si
// RUN: ! silc %s --split-input-file 2>&1 | FileCheck %s

mod UnassignedIdent {
    // CHECK: error: binding `a` has not been assigned
    let a: uint<32>;
}

// -----

mod UnassignedOutput {
    // CHECK: error: output `a` has not been assigned
    output a: uint<32>;
}

// -----

mod BadAssignLHS {
    // CHECK: error: expression `1u32` cannot appear on left-hand side of `=`
    1u32 = 2u32;
}

// -----

// CHECK: info: name `UnassignableLHS` defined here
mod UnassignableLHS {
    // CHECK: error: expression `UnassignableLHS` cannot be assigned
    UnassignableLHS = 2u32;
}

// -----

mod Foo {
    // CHECK: info: previous definition of port `x` was here
    input x: uint<32>;
    // CHECK: error: port `x` already defined
    input x: uint<32>;
}

// -----

mod Foo {
    // CHECK: info: previous definition of port `x` was here
    output x: uint<42>;
    // CHECK: error: port `x` already defined
    output x: uint<42>;
}

// -----

mod Foo {
    // CHECK: info: previous definition of port `x` was here
    input x: uint<42>;
    // CHECK: error: port `x` already defined
    output x: uint<42>;
}

// -----

mod BadIntLiteral {
    // CHECK: error: integer literal `1337` requires a width
    1337;
}

// -----

mod UnknownFunction {
    // CHECK: error: unknown function `foo`
    0.foo();
}
